# QL-

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.7.1.md  RELEASE_NOTES_v0.7.2.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.8.1.md  RELEASE_NOTES_v0.8.2.md  RELEASE_NOTES_v0.8.3.md  RELEASE_NOTES_v0.8.4.md  RELEASE_NOTES_v0.9.0.md  capacitor.config.ts  electron-builder.config.cjs  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-apk.yml
android/app/: build.gradle
android/app/src/main/res/values/: colors.xml  (+2 more)
electron/: main.cjs  preload.cjs
public/: manifest.webmanifest  sw.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: BackupActions.tsx  BookCard.tsx  BookShelf.tsx  BookmarkPanel.tsx  ChapterSidebar.tsx  EmptyState.tsx  IconButton.tsx  ImportButton.tsx  Layout.tsx  PwaInstallButton.tsx  Reader.tsx  ReaderBottomBar.tsx  ReaderHeader.tsx  ReaderMorePanel.tsx  ReaderSearchPanel.tsx  ReaderSettingsPanel.tsx
src/hooks/: usePwaInstallPrompt.ts
src/pages/: ReaderPage.tsx  ShelfPage.tsx
src/store/: useLibraryStore.ts  useReaderSettingsStore.ts
src/styles/: index.css
src/types/: book.ts
src/utils/: file.ts  format.ts  mobileControls.ts  parseEpub.ts  parseTxt.ts  registerServiceWorker.ts  search.ts  storage.ts  throttle.ts
(+4 files in other folders)
